--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "p2p-frost"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
+tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
+serde = {version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+once_cell = "1.5"
+log = "0.4"
+pretty_env_logger = "0.4"
