--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
-tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
-serde = {version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-once_cell = "1.5"
-log = "0.4"
-pretty_env_logger = "0.4"
-
+tokio = { version = "1.35", features = ["full"] }
+async-trait = "0.1"
+futures = "0.3.29"
+libp2p = { version="0.53", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Frost
 frost-secp256k1 = { version = "0.7.0", features = ["serde"] }
