--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Frost
 frost-secp256k1 = { version = "0.7.0", features = ["serde"] }
+serde = "1.0.193"
+serde_json = "1.0.108"
+log = "0.4.20"
+once_cell = "1.19.0"
