--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ libp2p = { version="0.53", features = [ "tokio", "gossipsub", "mdns", "noise", "
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Frost
-frost-secp256k1 = { version = "0.7.0", features = ["serde"] }
+frost-secp256k1 = { version = "0.7.0", features = ["serde", "serialization"] }
 serde = "1.0.193"
 serde_json = "1.0.108"
 log = "0.4.20"
